src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>rC_Giving__Corporate Underwriting</fullName>
        <description>Corporate Underwriting Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Inkind</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Membership</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Outright Gift</fullName>
        <description>An outright gift is a donation that is a one-time gift for any amount.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Pledge</fullName>
        <description>A pledge is the promise to donate a certain amount of money that will be paid in increments over a period of time.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Pledge Payment</fullName>
        <description>Tracks pledge payments, expected pledge payments, and refunds</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Proposal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Declined by Donor</fullName>
        </values>
        <values>
            <fullName>Pending Strategy Approval</fullName>
        </values>
        <values>
            <fullName>Ready to Solicit</fullName>
        </values>
        <values>
            <fullName>Solicited</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
        <values>
            <fullName>Written Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Purchase</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Transaction</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <description>T-480627</description>
        <label>Academic Program</label>
        <picklist>
            <picklistValues>
                <fullName>Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantor Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freeman Spogli Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoover Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPFCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Humanities and Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMC Gift Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMC Trust Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanford Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanford Law School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanford Medical School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Stanford Fund</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Actual_Ask_Date__c</fullName>
        <description>T-467757</description>
        <label>Actual Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commitment_Date__c</fullName>
        <description>T-467757</description>
        <label>Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact2)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>T-467757</description>
        <inlineHelpText>Select one or more groups that are collaborating on this specific proposal</inlineHelpText>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-X/Neuro/ChEM-H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center for Advanced Study in the Beh Sci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clayman Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freeman Spogli Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haas Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoover House Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libraries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lively Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longevity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Generation Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIEPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanford Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Ask_Reminder_Date__c</fullName>
        <description>T-467757</description>
        <inlineHelpText>not for display - use for JS alert for ask amount &gt; $5M</inlineHelpText>
        <label>Last Ask Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Ask_Amount__c</fullName>
        <description>T-467757</description>
        <inlineHelpText>Initial ask amount proposed</inlineHelpText>
        <label>Planned Ask Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Ask_Date__c</fullName>
        <description>T-467757</description>
        <inlineHelpText>Enter the date of the Planned Ask</inlineHelpText>
        <label>Planned Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related strategy for this proposal</description>
        <label>Strategy</label>
        <referenceTo>Strategy__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_Notified_of_Ask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T-467757</description>
        <label>VP Notified of Ask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Charge_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times this Transaction has been submitted to a Payment Processor.</description>
        <inlineHelpText>Number of times this Transaction has been submitted to a Payment Processor.</inlineHelpText>
        <label>Charge Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Is_Auto_Submit_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, indicates this transaction should be auto submitted for payment.</description>
        <inlineHelpText>Indicates this transaction should be auto submitted for payment.</inlineHelpText>
        <label>Auto-Submit Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Response_Code__c</fullName>
        <description>Stores the response code received from payment processor</description>
        <inlineHelpText>Stores the response code received from payment processor</inlineHelpText>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Response_Date_Time__c</fullName>
        <description>Stores the Date/Time of response received from payment processor.</description>
        <inlineHelpText>Stores the Date/Time of response received from payment processor.</inlineHelpText>
        <label>Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Response_Message__c</fullName>
        <description>Automatically populated, authorization approval or error message.</description>
        <inlineHelpText>Automatically populated, authorization approval or error message.</inlineHelpText>
        <label>Response Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Education__Days_In_Stage__c</fullName>
        <description>Number of days Opportunity in this stage</description>
        <formula>IF(ISNULL( rC_Education__Stage_History__r.rC_Education__Stage_End_Date__c ),
IF(OR(ISNULL(rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c),rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c &gt; TODAY()),0,TODAY()- rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c), 
IF(OR(ISNULL(rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c),rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c &gt; rC_Education__Stage_History__r.rC_Education__Stage_End_Date__c),0,rC_Education__Stage_History__r.rC_Education__Stage_End_Date__c - rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days in this stage</inlineHelpText>
        <label>Days In Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Education__Stage_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to stage history object to access stage</description>
        <inlineHelpText>Lookup to stage history object</inlineHelpText>
        <label>Stage History</label>
        <referenceTo>rC_Education__Stage_History__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Account_Name__c</fullName>
        <description>used for internal optimization: uses a formula field instead of a SOQL query, in the &quot;naming an opportunity&quot; trigger</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account name used when naming an opportunity.</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Account_Number__c</fullName>
        <description>This field is only used for data import when the value for the account number is known, but the account ID is not known but the external system.</description>
        <inlineHelpText>This field is only used for data import when the value for the account number is known, but the account ID is not known but the external system.</inlineHelpText>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Account_Update_Summaries_Age__c</fullName>
        <formula>MAX(0, LastModifiedDate - BLANKVALUE(Account.rC_Giving__Update_Summaries__c, NOW()))</formula>
        <label>Account: Update Summaries Age</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Acknowledged_Date__c</fullName>
        <description>Date Acknowledgement sent</description>
        <inlineHelpText>Date Acknowledgement sent</inlineHelpText>
        <label>Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has an acknowledgement been sent?</description>
        <inlineHelpText>Has an acknowledgement been sent?</inlineHelpText>
        <label>Acknowledged?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Activity_Type__c</fullName>
        <description>Defines type of Activity associated with gift. Mirrors the Giving record type.</description>
        <inlineHelpText>Defines type of Activity associated with gift. Mirrors the Giving record type.</inlineHelpText>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Affiliation__c</fullName>
        <description>Represents groups within the organization. Each Affiliation has its own Summary record on Account.</description>
        <inlineHelpText>Represents groups within the organization. Each Affiliation has its own Summary record on Account.</inlineHelpText>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Group 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Allocation_Amount__c</fullName>
        <description>Amount that has currently been allocated to different Accounting Units</description>
        <inlineHelpText>Amount that has currently been allocated to different Accounting Units</inlineHelpText>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Allocation_Model__c</fullName>
        <description>Defines method and complexity for Allocation Splits. All options go to different functionality related to Allocations.</description>
        <inlineHelpText>Defines how Allocation are split from pledge to transactions.</inlineHelpText>
        <label>Allocation Model</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Anniversary_Date__c</fullName>
        <description>Automatically populated &quot;Anniversary Date&quot; of membership period.  Field is  set to Close date for sustainers.</description>
        <inlineHelpText>Anniversary Date of membership period.</inlineHelpText>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Anniversary_Renewal_Date__c</fullName>
        <description>Auto populated, this is the next upcoming anniversary date of the sustainer and will be the date when new premiums are scheduled and shipped based on the sustainer&apos;s Giving Level.  The field is set to Close date + 1 year for sustainers.</description>
        <inlineHelpText>This is the next upcoming anniversary date of the sustainer, and will be the date when new premiums are scheduled and shipped based on the sustainer&apos;s Giving Level.</inlineHelpText>
        <label>Anniversary Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Annual_Giving_Amount__c</fullName>
        <description>Annual Giving Amount is the calculated amount the donor will give from the time period of the most recent Anniversary Date to the most recent Anniversary Date + 1 year</description>
        <inlineHelpText>Annual Giving Amount is the calculated amount the donor will give from the time period of the most recent Anniversary Date to the most recent Anniversary Date + 1 year</inlineHelpText>
        <label>Annual Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Application_Deadline__c</fullName>
        <description>Deadline to submit application.</description>
        <inlineHelpText>Deadline to submit application.</inlineHelpText>
        <label>Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Application_ID__c</fullName>
        <description>Internal ID for the Application.</description>
        <inlineHelpText>Internal ID for the Application.</inlineHelpText>
        <label>Application ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Ask_Readiness__c</fullName>
        <description>Disposition of constituent toward committing to determined Pledge ask amount.</description>
        <inlineHelpText>Disposition of constituent toward committing to determined Pledge ask amount.</inlineHelpText>
        <label>Ask Readiness</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>